# CPSC330-hw8

./: .gitignore  hw8.ipynb  pyproject.toml
