[project]
name = "cpsc330-hw8"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "otter-grader>=6.1.6",
    "pandas>=3.0.1",
    "scikit-learn>=1.8.0",
]
